--- a/main.html
+++ b/main.html
@@ -7,6 +7,21 @@
 </head>
 
 <body>
+	<div class="main">
+		<p>First paragraph</p>
+		<p>lorem50</p>
+		<p>lorem50</p>
+		<p>lorem50</p>
+
+		<ul>
+			<li class="first">First item</li>
+			<li class="second">Second item</li>
+			<li class="three">three item</li>
+			<li class="four">four item</li>
+			<li class="last">Fifth item</li>
+			
+		</ul>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
