--- a/main.html
+++ b/main.html
@@ -8,11 +8,12 @@
 
 <body>
 	<div class="main">
+		<article>
 		<p>First paragraph</p>
 		<p>lorem50</p>
 		<p>lorem50</p>
 		<p>lorem50</p>
-
+		</article>
 		<ul>
 			<li class="first">First item</li>
 			<li class="second">Second item</li>
